--- a/09_监视属性/4.姓名案例_watch实现.html
+++ b/09_监视属性/4.姓名案例_watch实现.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- computed（计算属性）必须有返回值，而 methods（方法）和 watch（侦听器）不强制要求返回值
+ 必须主动调用 (如 {{ func() }} 或 @click="func")	被动调用，直接当作属性使用 (如 {{ fullName }})，无需加 ()	被动触发，监听数据变化时自动执行 -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
